FIX: survey card alignment

--- a/src/Components/Home-Page/Layout/Information/InformationCards/SurveyInformationCard/index.css
+++ b/src/Components/Home-Page/Layout/Information/InformationCards/SurveyInformationCard/index.css
@@ -1,6 +1,6 @@
 .outer-card-container {
   display: flex;
-  justify-content: center;
+  justify-content: stretch;
   align-items: stretch;
   background: var(--Purple-25, #f7f6f9);
   gap: 9.56rem;
@@ -87,7 +87,7 @@
 @media screen and (max-width: 1024px) {
   .outer-card-container {
     justify-content: space-evenly;
-    align-items: center;
+    align-items: stretch;
     gap: 3rem;
   }
 }
@@ -103,6 +103,7 @@
 @media screen and (max-width: 576px) {
   .outer-card-container {
     flex-direction: column;
+    align-items: center;
     gap: 2.5rem;
     margin-bottom: 3rem;
     padding-top: 0.5rem;
